# cirrus-sdca

./: .gitignore  .gitmodules  README.md
cpp/: CMakeLists.txt  CriteoSDCATFPreprocess.cpp  SDCA.cpp  SDCA.h  SparseMatrix.cpp  SparseMatrix.h  TFPreprocess.cpp  TFPreprocess.h  sdca.cpp  sdca.h
cpp/cirrus/src/: Checksum.h  Configuration.cpp  Dataset.cpp  Dataset.h  InputReader.cpp  InputReader.h  Matrix.cpp  Matrix.h  SparseDataset.cpp  SparseDataset.h  Utils.cpp
criteo/: README  criteo_sdca.py  criteo_sdca_google_preprocessing.py  criteo_sdca_google_preprocessing_extrabucket.py  criteo_sdca_hash_method.py  sdca_sparse.py
other_datasets/breast_cancer/: breast-cancer.csv  sdca.py  sdca_breast_cancer.py
other_datasets/income/: adult_income_test_clean.csv  income_data_clean.csv  income_data_processing.r  sdca_income.py
